# Personal-projects

./: Energy Generation, Consumption, and Sustainability Trends_ A Comparative Analysis of Developed and Developing Nations.ipynb  IM939 Energy Generation, Consumption, and Sustainability Trends_ A Comparative Analysis of Developed and Developing Nations.ipynb  README.md
Energy Consumption trends/: Readme.md
datacentre-energy-analytics/: .gitignore  README.md  pyproject.toml  requirements.txt
datacentre-energy-analytics/data/: README.md
datacentre-energy-analytics/dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
datacentre-energy-analytics/docs/: analysis_visualisations_and_tables.docx
datacentre-energy-analytics/notebooks/: 01_cloudscene_country_scraper.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb  04_gdelt_sentiment_pipeline.ipynb  05_gdelt_sentiment_local_models.ipynb  06_lightgbm_energy_surrogate.ipynb  07_uk_datacentre_demand_scaling.ipynb
datacentre-energy-analytics/outputs/: dc_per_capita_2024.csv
datacentre-energy-analytics/tests/: conftest.py  test_analysis.py  test_cleaning.py  test_surrogate.py
datacentre-energy-analytics/visualisations/: dc_per_capita.html  dc_per_capita_2024_folium.html  dc_per_capita_2024_no_outliers.html  dc_per_capita_no_top_3.html
twitter-sentiment-analysis/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
twitter-sentiment-analysis/data/: README.md
twitter-sentiment-analysis/notebooks/: original-experiments.ipynb
twitter-sentiment-analysis/report/: lab-report.docx
(+92 files in other folders)
