[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-energy"
version = "0.1.0"
description = "Data-centre energy analytics: cleaning, density analysis, and server power surrogate modelling"
authors = [{ name = "Pratik Bhala", email = "pratikbhala1998@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "Unidecode>=1.3",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.0", "scikit-learn>=1.3", "duckdb>=0.10"]
viz = ["plotly>=5.18", "folium>=0.15", "matplotlib>=3.8"]
dev = ["pytest>=7.4", "openpyxl>=3.1"]

[project.scripts]
dc-energy = "dc_energy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
